<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.smarteist.autoimageslider.SliderView
        android:clickable="false"
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:sliderAnimationDuration="600"
        android:layout_centerInParent="true"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorEnabled="true"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#005A5A5A"
        app:sliderIndicatorUnselectedColor="#00000000"
        app:sliderScrollTimeInSec="1" />

    <TextView
        android:layout_above="@id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/nice_to_see_you"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:cardCornerRadius="16dp"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nice_to_see_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/login"
                android:textColor="@color/colorTitle"
                android:textSize="20dp"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/sign_up_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nice_to_see_you_text_view"
                android:layout_marginTop="30dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/email_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                            android:drawablePadding="10dp"
                            android:hint="@string/email_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textColorHint="#696969"
                            app:drawableTint="#2F2F2F"
                            android:textSize="13sp"

                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"

                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="13sp"
                            app:drawableTint="#2F2F2F"
                            android:textColorHint="#696969"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="10dp"
                            tools:ignore="TextFields"
                            android:autofillHints="password" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_input_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/forgot_password"
                    android:textColor="#4A148C"
                    android:textSize="13sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/login_button_card_view"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/sign_up_input_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorCardViewBackground"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button_card_view"
                android:layout_margin="13dp"
                android:text="@string/you_are_not_a_member_register"
                android:textColor="#000" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>