<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    tools:context=".SignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/nice_to_see_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Welcome!"
                android:textColor="@color/colorTitle"
                android:textSize="30sp"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/sign_up_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nice_to_see_you_text_view"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/name_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/name_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15dp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/name_input_parent"
                    android:id="@+id/email_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/email_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/phone_number_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/phone_number_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/sign_up_button_card_view"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/sign_up_input_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorCardViewBackground"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">
                <RelativeLayout
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:text="@string/already_have_account"
            android:textColor="#000" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>