<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:sliderAnimationDuration="600"
        android:layout_centerInParent="true"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorEnabled="true"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#005A5A5A"
        app:sliderIndicatorUnselectedColor="#00000000"
        app:sliderScrollTimeInSec="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_view"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="Welcome!"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:cardCornerRadius="16dp"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/nice_to_see_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="SignUp"
                android:textColor="@color/colorTitle"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/sign_up_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nice_to_see_you_text_view"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/name_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/name_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            app:drawableTint="#2F2F2F"
                            android:textColorHint="#696969"
                            android:drawableStart="@drawable/ic_baseline_person_24"
                            android:drawablePadding="10dp"
                            android:textSize="13dp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/name_input_parent"
                    android:id="@+id/email_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/email_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="13sp"
                            app:drawableTint="#2F2F2F"
                            android:textColorHint="#696969"
                            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                            android:drawablePadding="10dp"
                            tools:ignore="TextFields"
                            android:autofillHints="emailAddress" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/phone_number_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            app:drawableTint="#2F2F2F"
                            android:textColorHint="#696969"
                            android:drawableStart="@drawable/ic_baseline_local_phone_24"
                            android:drawablePadding="10dp"
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="13sp"
                            tools:ignore="TextFields" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/phone_number_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="13sp"
                            tools:ignore="TextFields"
                            app:drawableTint="#2F2F2F"
                            android:textColorHint="#696969"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="10dp"
                            android:autofillHints="password" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/sign_up_button_card_view"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/sign_up_input_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorCardViewBackground"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">
                <RelativeLayout
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_below="@id/sign_up_button_card_view"
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/already_have_account"
                android:textColor="#000" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>